Fix: добавил базовую рализацию поиску по мантикору
