# routes/api.php
@@ -13,3 +13,6 @@ Route::get('/orders/statistics', [OrderStatisticsController::class, 'index']);
 Route::get('/orders/{id}', [OrderController::class, 'show']);
 
 Route::post('/soap/order', [OrderController::class, 'soapStore']);
+
+//manticore search basic *
+Route::get('/search/orders', [OrderController::class, 'search']);
